// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fyndiq-component-tooltip should be rendered without props 1`] = `
<Dropdown
  button={
    <span>
      tooltip
    </span>
  }
  className=""
  disabled={false}
  hoverMode={true}
  margin={5}
  noArrow={false}
  noPropagateClickEvent={false}
  noWrapperStyle={true}
  onClose={[Function]}
  onOpen={[Function]}
  opened={false}
  position="bc"
  wrapperClassName=""
>
  <div
    className="
            tooltip
            position-bc
            type-black
            
          "
    style={
      Object {
        "width": 190,
      }
    }
  >
    <div
      className="helperWrapper"
    >
      help
    </div>
  </div>
</Dropdown>
`;

exports[`fyndiq-component-tooltip should have a component for the prop text 1`] = `
<div
  className="
            tooltip
            position-bc
            type-black
            
          "
  style={
    Object {
      "width": 190,
    }
  }
>
  <div
    className="helperWrapper"
  >
    <div>
      hello
    </div>
  </div>
</div>
`;

exports[`fyndiq-component-tooltip should not have a tooltip if the text is null or undefined 1`] = `
<Tooltip
  className=""
  maxWidth={190}
  position="bc"
  text={null}
  type="black"
  wrapperClassName=""
>
  tooltip
</Tooltip>
`;
